# metastack

./: ARCHITECTURE.md  BUGS.md  CHANGELOG.md  Cargo.toml  README.md  WASI-GAPS.md  flake.nix  metastack.yaml  routing.example.yaml  smoke-test.example.yaml
.github/workflows/: ci.yml
nix/modules/: home-manager.nix  nixos.nix
src/: bucket.rs  main.rs  mcp.rs  routing.rs
