[package]
name = "metastack"
version = "0.9.1"
edition = "2024"
rust-version = "1.88"
description = "Tiny DAG runner over zellij-mcp with a structured agent send prototype"
license = "MIT"
repository = "https://github.com/zh4ngx/metastack"
homepage = "https://github.com/zh4ngx/metastack"
readme = "README.md"

[[bin]]
name = "metastack"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.27"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
